--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "axios": "^1.5.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
