--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-router-dom": "^6.17.0",
     "react-table": "^7.8.0",
     "tailwind": "^4.0.0"
   },
